# ChangeLog for net-p2p/gnunet-gtk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/gnunet-gtk/Attic/ChangeLog,v 1.8 2007/12/17 19:48:55 armin76 Exp $

*gnunet-gtk-0.7.2c (17 Dec 2007)

  17 Dec 2007; Raúl Porcel <armin76@gentoo.org> -gnunet-gtk-0.7.0e.ebuild,
  +gnunet-gtk-0.7.2c.ebuild:
  Version bump wrt #199891 and remove old

*gnunet-gtk-0.7.1b (23 Mar 2007)

  23 Mar 2007; Raúl Porcel <armin76@gentoo.org> +gnunet-gtk-0.7.1b.ebuild:
  Version bump wrt bug 167680

  23 Jan 2007; Raúl Porcel <armin76@gentoo.org> -gnunet-gtk-0.7.0d.ebuild:
  Drop old

*gnunet-gtk-0.7.0e (12 Jan 2007)

  12 Jan 2007; Raúl Porcel <armin76@gentoo.org> -gnunet-gtk-0.7.0.ebuild,
  +gnunet-gtk-0.7.0e.ebuild:
  Version bump, bug 134198

*gnunet-gtk-0.7.0d (19 May 2006)

  19 May 2006; Jon Hood <squinky86@gentoo.org> +gnunet-gtk-0.7.0d.ebuild:
  Version bump, #129613.

  15 Jan 2006; <dang@gentoo.org> gnunet-gtk-0.7.0.ebuild:
  Marked ~amd64 per bug# 109764

  04 Oct 2005; <mkay@gentoo.org> gnunet-gtk-0.7.0.ebuild:
  Added libglade to DEPEND. Thanks Corvus Corax for bug #108113

*gnunet-gtk-0.7.0 (21 Sep 2005)

  21 Sep 2005; <mkay@gentoo.org> +gnunet-gtk-0.7.0.ebuild:
  gnunet is now splitted and the gui is delivered in separate package.
  Initial version. Thanks Glenn L. McGrath for bug #67222
