@@ -1,3 +1,0 @@
-MD5 c3660a540bbbc0034c28252dadd36bd9 gnunet-gtk-0.7.1b.tar.bz2 567409
-RMD160 02cdb94c0ea9cc2e2f7a0a8b14723e14600e8d20 gnunet-gtk-0.7.1b.tar.bz2 567409
-SHA256 6efdc84b898b6e8e6b692dde76e4f04cebea188b75be224d431e4c3497ccb9ff gnunet-gtk-0.7.1b.tar.bz2 567409
