@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/gnunet-gtk
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/gnunet-gtk/Attic/ChangeLog,v 1.8 2007/12/17 19:48:55 armin76 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/gnunet-gtk/Attic/ChangeLog,v 1.9 2008/01/16 15:07:32 armin76 Exp $
+
+*gnunet-gtk-0.7.3 (16 Jan 2008)
+
+  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> -gnunet-gtk-0.7.1b.ebuild,
+  gnunet-gtk-0.7.2c.ebuild, +gnunet-gtk-0.7.3.ebuild:
+  Version bump, remove old
 
 *gnunet-gtk-0.7.2c (17 Dec 2007)
 
